# logist

./: .git_commit_message-1645170  .gitignore  .summary.json  AGENTS.md  README.md  __init__.py  cli.py  debug-test-run.py  demo.out  error_logging.py  fix-queue-terminal-state-cleanup-105437.txt  job_context.py  job_history.py  job_processor.py  job_state.py  metrics_utils.py  prepare-validation-fixes-1105384.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-demo.sh  test_response.json  workspace_utils.py
AGENTS/: as-committer.md  as-prompt-writer.md  as-python-developer.md  as-supervisor.md  as-worker.md  prepare-python-project.sh
config/: default-roles.json
dev_notes/changes/: 2025-12-26_13-01-52_create-agent-runtime-project-plan.md  2025-12-26_13-03-51_phase1-core-architecture.md  2025-12-26_13-10-28_phase2-mock-agent-testing.md  2025-12-26_13-14-21_phase3-job-directory-management.md  2025-12-26_13-14-50_phase3-advisory-file-locking.md  2025-12-26_13-15-30_phase3-job-recovery-logic.md  2025-12-26_13-18-31_phase4-observer-module.md  (+17 more)
doc/: .gitignore  01_architecture.md  02_roles_overview.md  04_state_machine.md  05_cli_reference.md  06_testing_strategy.md  07_runner_agent_architecture.md  08_configuration.md  TODO.md  overview.md  problems.md  workspace.md
doc/archive/: legacy-roles.md
docs/: 01_architecture.md  02_roles_and_data.md  03_cli_and_metrics.md  04_state_machine.md  05_cli_reference.md  06_testing_strategy.md  README.md  TODO.md  architecture.md  batch-execution.md  cli-reference.md  definition-of-done.md  implementation-history.md  implementation-reference.md  mandatory.md  master-plan.md  oneshot-research.md  oneshot-setup-usage.md  oneshot-testing.md  overview.md  state-machine-fig1.gv  state-machine.md  templates.md  workflows.md
planning/: 2025-12-26_13-01-52_agent-runtime-abstraction-plan-plan.md  2025-12-26_13-01-52_agent-runtime-abstraction-summary.md  2025-12-26_13-47-56_state-machine-consistency-summary.md  2025-12-26_14-13-00_mock-agent-development-plan-plan.md  2025-12-26_14-13-00_mock-agent-development-summary.md  2025-12-26_19-14-00_mock-runtime-implementation-plan-plan.md  2025-12-26_19-14-00_mock-runtime-implementation-summary.md  2025-12-26_20-17-12_reduce-sleep-times-in-integration-tests-summary.md  2025-12-26_20-33-03_add-debugging-statements-job-manager-summary.md  2025-12-26_20-43-14_separate-workspace-setup-summary.md  2025-12-26_21-05-25_run-and-fix-concurrency-tests-plan-plan.md  2025-12-26_21-38-48_core-engine-refactor-summary.md  2025-12-26_22-20-24_disable-git-branch-tests-plan.md  2025-12-26_22-20-24_disable-git-branch-tests-summary.md  2025-12-28_15-30-39_clarify-job-attributes-plan-plan.md  2025-12-28_runner-lifecycle-architecture-plan-plan.md  2025-12-29_remove-role-features-plan-plan.md  2025-12-29_state-machine-redesign-plan-plan.md
schemas/: llm-chat-schema.json
scripts/: analyze-variance.py  batch-executor.py  demo-schema.py  oneshot-monitor.py  oneshot-start.py  oneshot.sh  test-demo.sh
src/: __init__.py
test-jobs/: jobs_index.json
test_error_job_sim/: job_manifest.json
test_poststep_job/: jobHistory.json  job_manifest.json
tests/: __init__.py  conftest.py  test-job-simple.py  test_agent_runtime_integration.py  test_cli.py  test_concurrency.py  test_core_engine.py  test_init_roles.py  test_integration_e2e.py  test_job_context.py  test_mock_agent.py  test_state_machine.py  test_validation.py  test_workspace_utils.py
(+140 files in other folders)
